--- a/css/project.css
+++ b/css/project.css
@@ -167,7 +167,7 @@ body {
     background-color: var(--background-color);
     font-family: "Fira Code", monospace;
     width: 100%;
-    color: var(--body-text);
+    color: var(--secondary-text);
     font-weight: 500;
 }
 body::-webkit-scrollbar {
@@ -227,7 +227,7 @@ li {
     padding: 0.5rem 0 0.5rem 0.5rem;
 }
 main {
-    color: var(--body-text);
+    color: var(--secondary-text);
 }
 
 .editor {
@@ -253,6 +253,7 @@ h2 {
 h1,
 h2 {
     font-weight: 700;
+    color: var(--body-text);
 }
 .image:hover {
     cursor: pointer;
@@ -303,11 +304,15 @@ hr {
 }
 
 .line-break {
+    display: flex;
+    height: 1.5rem;
     margin: 1.5rem 0;
     padding-left: 5.3rem;
     padding-right: 4.4rem;
     border-width: 0px;
     color: var(--line-break);
+    opacity: 80%;
+    overflow: hidden !important;
 }
 
 .line-break::before {
@@ -318,6 +323,7 @@ hr {
 .line-break::after {
     content: "--------------------------------------------------------------";
     font-variant-ligatures: none;
+    overflow-wrap: anywhere;
 }
 footer {
     display: flex;
@@ -386,50 +392,107 @@ footer {
     color: #cfcfc2;
 }
 
-.mobile-view{
+.mobile-view {
     display: none;
 }
 
 /*mobile view*/
 
-@media screen and (max-width:599px) {
-    .mobile-view{
-        display:block ;
+@media screen and (max-width: 599px) {
+    .mobile-view {
+        display: block;
+        margin-top: 0;
     }
-    .editor{
+    .desktop-view {
         display: none;
     }
-    .mobile-flex{
+    body::-webkit-scrollbar {
+        display: none;
+    }
+    .editor-content {
+        max-width: 40ch;
+    }
+
+    .container {
+        margin-top: 1px;
+    }
+
+    .nav-list {
+        flex: 0 0 auto;
+    }
+
+    .nav-item {
+        flex: 0 0 auto;
+        min-width: 25%;
+    }
+
+    .nav-link div {
+        min-width: 0;
+    }
+
+    h1 {
+        font-size: 17.5px;
+    }
+
+    h2 {
+        font-size: 15.5px;
+    }
+
+    p {
+        font-size: 14px;
+        line-height: 1.4;
+    }
+
+    .mobile-flex {
         display: flex;
         flex-direction: row;
         padding-left: 20px;
-      }
-      .mobile-image{
+    }
+    .mobile-image {
         padding-left: 25px;
         padding-right: 25px;
-      }
-      
-      .mobile-paragraph{
+    }
+
+    .mobile-paragraph {
         padding-left: 2.5rem;
-        padding-bottom:1rem;
+        padding-bottom: 1rem;
         padding-top: 1rem;
-      }
-      .second {
-        font-size: 20px;
+    }
+    .second {
         padding-top: 30px;
         padding-left: 20px;
         margin-left: 1.5rem;
-      }
-      .second-paragraph {
+    }
+    .second-paragraph {
         margin-left: 1.5rem;
         padding-left: 20px;
-      }
-     
-    .mobile-link{
+    }
+
+    .mobile-link {
         color: var(--accent);
         text-decoration-line: underline;
     }
-    h3{
+    h3 {
         color: var(--body-text);
+    }
+
+    .line-break {
+        padding-left: 4ch;
+    }
+
+    footer {
+        min-height: 0;
+        padding-left: 4ch;
+        padding-bottom: 5rem;
+        flex-direction: column;
+        font-size: 14px;
+    }
+    .social-links {
+        flex-direction: column;
+        padding-bottom: 1.5rem;
+    }
+
+    .bullet {
+        display: none;
     }
 }
