--- a/css/blog-article1.css
+++ b/css/blog-article1.css
@@ -1,4 +1,3 @@
-
 :root,
 :root.monokai {
     --background-color: #1e1f1c;
@@ -189,11 +188,11 @@ body::-webkit-scrollbar {
     background-color: var(--inactive-navbar-background);
 }
 
-.nav-item{
+.nav-item {
     list-style: none;
 }
 
-.nav-item a{
+.nav-item a {
     text-decoration: none;
     color: var(--body-text);
     padding-bottom: 0;
@@ -252,9 +251,8 @@ nav {
 
 .editor {
     text-align: left;
-
     color: #fff;
-    width: 640px;
+    max-width: 81ch;
 }
 /* Header */
 
@@ -362,7 +360,7 @@ footer ul a {
     font-size: 16px;
 }
 
- footer ul span {
+footer ul span {
     padding-right: 0.5rem;
 }
 
@@ -416,69 +414,73 @@ footer ul a:hover {
     color: var(--accent-hover);
 }
 
-.main-article p{
+.main-article p {
     padding-bottom: 7px;
 }
 
-.main-article{
+.main-article {
     color: rgb(212, 212, 212);
 }
 
-.main-article h2{
-    padding: 17px 0  8px;
+.main-article h2 {
+    padding: 17px 0 8px;
     font-size: 22px;
 }
 
-.black-div{
+.black-div {
     padding: 30px 0;
 }
 
-blockquote{
+blockquote {
     margin-left: 0;
 }
 
-.hr-color{
-    color: rgb(106, 153, 85);
+.hr-color {
+    color: var(--line-break);
 }
 
-.comment{
-    color: rgb(106, 153, 85);
+.comment {
+    color: var(--line-break);
 }
 
-pre{
+pre {
     display: block;
 }
 .codes {
     background-color: rgb(28, 28, 28);
     margin-left: -68px;
-    margin-right: -68px;
+    margin-right: -28px;
 }
 
-code{
+code {
     font-size: 16px;
 }
 
-.code-div{
+.space-before {
+    padding-left: 68px;
+}
+
+.code-div {
     margin: 0;
 }
 
-.blue-text{
+.blue-text {
     color: rgb(86, 156, 214);
 }
 
-.yellow-text{
+.yellow-text {
     color: rgb(220, 220, 170);
 }
 
-.red-text{
+.red-text {
     color: rgb(206, 145, 120);
 }
 
-.green-text{
-     color: rgb(181, 206, 168);
+.green-text {
+    color: rgb(181, 206, 168);
 }
 
-.reduce{
+.reduce {
     text-decoration-color: rgb(166, 226, 46);
     color: rgb(206, 145, 120);
     text-underline-position: under;
@@ -494,7 +496,10 @@ code{
 }
 
 .scroll-bar {
-   overflow-x: auto;
+    overflow-x: auto;
+}
+.scroll-bar::-webkit-scrollbar {
+    display: none;
 }
 .text-1-content::before {
     content: "> > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >";
@@ -504,7 +509,7 @@ code{
     color: rgb(106, 153, 85);
 }
 
-.text-3-content p{
+.text-3-content p {
     margin: 0;
 }
 
@@ -551,124 +556,144 @@ code{
     color: var(--secondary-text);
 }
 
-
 /* blog.html media query */
 @media only screen and (max-width: 600px) {
-    .container{
+    body::-webkit-scrollbar {
+        display: none;
+    }
+
+    .container {
         margin: 0;
     }
-    
-    .blog-header{
+
+    .editor {
+        max-width: 44ch;
+    }
+
+    .blog-header {
         padding-bottom: 25px;
     }
     .article {
-      display: block;
+        display: block;
     }
-    .article-div{
+    .article-div {
         padding-bottom: 10px;
     }
-    .article img{
+    .article img {
         width: 298.667px;
         height: 168px;
         margin: -10px 0 20px 0;
         object-fit: contain;
         max-width: 100%;
     }
-    .article-div p{
-        font-size: 14.5px
+    .article-div p {
+        font-size: 14.5px;
     }
-    header{
+    header {
         margin-left: 0;
     }
-    .main-content{
+    .main-content {
         padding: 0 45px;
         line-height: 20px;
     }
     .content {
         padding-top: 0;
     }
-    ul{
+    ul {
         margin: 0;
     }
-    
-    h1{
-        font-size: 18px;
+
+    h1,
+    .main-article h2 {
+        font-size: 17.5px;
     }
-    h3{
-      font-size: 16px;
+    h3 {
+        font-size: 16px;
     }
-    header p{
+    header p {
         font-size: 15px;
     }
-    .time{
+    .time {
         padding: 0;
     }
-    hr{
+    hr {
         margin-top: 0;
     }
-   footer{
-        display: block; 
+    footer {
+        display: block;
     }
-    footer ul{
+    footer ul {
         display: block;
         padding-bottom: 7px;
     }
-    footer li{
-       line-height: 21px;
+    footer li {
+        line-height: 21px;
     }
-    footer ul a{
+    footer ul a {
         letter-spacing: none;
         font-size: 14px;
     }
-    .dot{
+    .dot {
         display: none;
     }
-    .color-theme-name{
+    .color-theme-name {
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
     }
-    .main-article{
+    .theme-picker {
+        width: 9rem;
+        left: 0;
+        top: 6.5rem;
+    }
+    .main-article {
         font-size: 14px;
     }
-    .article1-header{
+    .article1-header {
         display: block;
     }
-    .line{
+    .line {
         display: none;
     }
-    .time-nolines{
+    .time-nolines {
         padding-top: 0;
     }
-    header p{
+    header p {
         margin-bottom: 0;
     }
-    .article1-header{
+    .article1-header {
         padding-bottom: 20px;
     }
-    .article1-img{
-        width: 85%;  
+    .article1-img {
+        width: 85%;
     }
-    .codes{
+    .codes {
         margin-left: -45px;
-        margin-right: -45px; 
     }
-    code{
+    code {
         position: relative;
         left: -20px;
     }
-    .nav-item div {
-        width: 7rem;
-        padding-right: 5px; 
-        padding-bottom: 0; 
-    }
-     .nav-link div {
-        width: 7.5rem;
-        padding: 0.3rem 0 0.3rem 0.5rem;
+    nav {
+        overflow: auto;
     }
 
+    nav::-webkit-scrollbar {
+        display: none;
+    }
+    .nav-list {
+        flex: 0 0 auto;
+    }
+
+    .nav-item {
+        flex: 0 0 auto;
+        min-width: 25%;
+    }
+
+    .nav-link div {
+        min-width: 0;
+    }
 }
 
-
-
-
+@media only screen and (max-width: 425px) {
+}
