--- a/css/ghostmask.css
+++ b/css/ghostmask.css
@@ -171,6 +171,10 @@ body {
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
 }
+.container {
+    max-width: 81ch;
+    margin: auto;
+}
 li {
     list-style-type: none;
 }
@@ -217,7 +221,7 @@ header {
 }
 
 .nav-link div {
-    width: 7.5rem;
+    min-width: 7.5rem;
     padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
@@ -243,7 +247,6 @@ header {
     background-color: var(--inactive-navbar-background);
 }
 main {
-    max-width: 81ch;
     color: var(--body-text);
     margin: auto;
 }
@@ -309,12 +312,11 @@ footer {
 }
 
 .social-links {
-    display: flex;
     font-weight: 500;
 }
 
 .social-link {
-    padding-right: 0.7rem;
+    display: inline-block;
 }
 
 .social-link a {
@@ -331,6 +333,7 @@ footer {
 .color-theme-name {
     position: relative;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .arrow {
@@ -398,6 +401,14 @@ footer {
         margin-top: 1px;
     }
 
+    nav {
+        overflow: auto;
+    }
+
+    nav::-webkit-scrollbar {
+        display: none;
+    }
+
     .nav-list {
         flex: 0 0 auto;
     }
@@ -409,6 +420,15 @@ footer {
 
     .nav-link div {
         min-width: 0;
+    }
+
+    .article-tab {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .article-tab span {
+        margin-right: 0;
     }
 
     h1 {
@@ -470,6 +490,7 @@ footer {
         font-size: 14px;
     }
     .social-links {
+        display: flex;
         flex-direction: column;
         padding-bottom: 1.5rem;
     }
