--- a/css/nexo.css
+++ b/css/nexo.css
@@ -171,6 +171,10 @@ body {
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
 }
+.container {
+    max-width: 81ch;
+    margin: auto;
+}
 
 li {
     list-style-type: none;
@@ -218,7 +222,7 @@ header {
 }
 
 .nav-link div {
-    width: 7.5rem;
+    min-width: 7.5rem;
     padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
@@ -244,7 +248,6 @@ header {
     background-color: var(--inactive-navbar-background);
 }
 main {
-    max-width: 81ch;
     color: var(--body-text);
     margin: auto;
 }
@@ -311,12 +314,11 @@ footer {
 }
 
 .social-links {
-    display: flex;
     font-weight: 500;
 }
 
 .social-link {
-    padding-right: 0.7rem;
+    display: inline-block;
 }
 
 .social-link a {
@@ -333,6 +335,7 @@ footer {
 .color-theme-name {
     position: relative;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .arrow {
@@ -401,6 +404,14 @@ footer {
         margin-top: 1px;
     }
 
+    nav {
+        overflow: auto;
+    }
+
+    nav::-webkit-scrollbar {
+        display: none;
+    }
+
     .nav-item {
         flex: 0 0 auto;
         min-width: 25%;
@@ -408,6 +419,16 @@ footer {
 
     .nav-link div {
         min-width: 0;
+    }
+
+    .article-tab {
+        display: flex;
+        justify-content: space-between;
+        white-space: nowrap;
+    }
+
+    .article-tab span {
+        margin-right: 0;
     }
 
     h1 {
@@ -469,6 +490,7 @@ footer {
         font-size: 14px;
     }
     .social-links {
+        display: flex;
         flex-direction: column;
         padding-bottom: 1.5rem;
     }
