--- a/css/rundown.css
+++ b/css/rundown.css
@@ -172,6 +172,11 @@ body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
 }
 
+.container {
+    max-width: 81ch;
+    margin: auto;
+}
+
 li {
     list-style-type: none;
 }
@@ -218,7 +223,7 @@ header {
 }
 
 .nav-link div {
-    width: 7.5rem;
+    min-width: 7.5rem;
     padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
@@ -244,7 +249,6 @@ header {
     background-color: var(--inactive-navbar-background);
 }
 main {
-    max-width: 81ch;
     color: var(--secondary-text);
     margin: auto;
 }
@@ -305,12 +309,11 @@ footer {
 }
 
 .social-links {
-    display: flex;
     font-weight: 500;
 }
 
 .social-link {
-    padding-right: 0.7rem;
+    display: inline-block;
 }
 
 .social-link a {
@@ -327,6 +330,7 @@ footer {
 .color-theme-name {
     position: relative;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .arrow {
@@ -394,6 +398,14 @@ footer {
         margin-top: 1px;
     }
 
+    nav {
+        overflow: auto;
+    }
+
+    nav::-webkit-scrollbar {
+        display: none;
+    }
+
     .nav-list {
         flex: 0 0 auto;
     }
@@ -405,6 +417,15 @@ footer {
 
     .nav-link div {
         min-width: 0;
+    }
+
+    .article-tab {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .article-tab span {
+        margin-right: 0;
     }
 
     h1 {
@@ -466,6 +487,7 @@ footer {
         font-size: 14px;
     }
     .social-links {
+        display: flex;
         flex-direction: column;
         padding-bottom: 1.5rem;
     }
