--- a/css/article-2.css
+++ b/css/article-2.css
@@ -13,11 +13,14 @@
     --line-break: #88846f;
     --accent: #a6e22e;
     --accent-hover: #4e94ce;
+    --color-focus: #75715e;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --color-blockquote: var(--line-break);
+    --color-blockquote-symbol: var(--line-break);
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -37,11 +40,14 @@
     --line-break: #6a9955;
     --accent: #4ec9b0;
     --accent-hover: #4e94ce;
+    --color-focus: #007fd4;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --color-blockquote: var(--body-text);
+    --color-blockquote-symbol: var(--line-break);
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -60,11 +66,14 @@
     --line-break: #008000;
     --accent: #267f99;
     --accent-hover: #0000ff;
+    --color-focus: #0090f1;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #64646466;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #00000099;
     --color-scrollbar-shadow: #dddddd;
+    --color-blockquote: var(--body-text);
+    --color-blockquote-symbol: #0451a5;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -83,11 +92,14 @@
     --line-break: #6a737d;
     --accent: #96d0ff;
     --accent-hover: #4e94ce;
+    --color-focus: #005cc5;
     --color-scrollbar-border: #1b1f23;
     --color-scrollbar-thumb: #6a737d33;
     --color-scrollbar-thumb-hover: #6a737d44;
     --color-scrollbar-thumb-active: #6a737d88;
     --color-scrollbar-shadow: #00000088;
+    --color-blockquote: #85e89d;
+    --color-blockquote-symbol: var(--color-blockquote);
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -107,11 +119,14 @@
     --line-break: #6a737d;
     --accent: #032f62;
     --accent-hover: #0000ff;
+    --color-focus: #2188ff;
     --color-scrollbar-border: #ffffff;
     --color-scrollbar-thumb: #959da533;
     --color-scrollbar-thumb-hover: #959da544;
     --color-scrollbar-thumb-active: #959da588;
     --color-scrollbar-shadow: #6a737d33;
+    --color-blockquote: #22863a;
+    --color-blockquote-symbol: var(--color-blockquote);
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -131,11 +146,14 @@
     --line-break: #93a1a1;
     --accent: #268bd2;
     --accent-hover: #0000ff;
+    --color-focus: #d3af86;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #64646466;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #00000099;
     --color-scrollbar-shadow: #dddddd;
+    --color-blockquote: #859900;
+    --color-blockquote-symbol: var(--color-blockquote);
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -176,7 +194,7 @@ li {
 
 body {
     background-color: var(--background-color);
-    color: var(--secondary-text);
+    color: var(--body-text);
     font-family: var(--font-mono);
     font-weight: 500;
     line-height: 1.5rem;
@@ -255,9 +273,11 @@ body::-webkit-scrollbar {
 
 .title p {
     max-width: 44ch;
+    color: var(--secondary-text);
 }
 
 .publish-date {
+    color: var(--secondary-text);
     font-size: 0.8rem;
     text-align: right;
 }
@@ -308,9 +328,12 @@ code {
 
 blockquote {
     display: flex;
-    color: var(--line-break);
     overflow: hidden;
     margin-bottom: 1rem;
+}
+
+blockquote p {
+    color: var(--color-blockquote);
 }
 
 blockquote::before {
@@ -318,6 +341,7 @@ blockquote::before {
     width: 1ch;
     height: 1.5rem;
     margin-right: 2ch;
+    color: var(--color-blockquote-symbol);
 }
 
 .marker {
@@ -380,6 +404,10 @@ footer {
 .color-theme-name {
     position: relative;
     cursor: pointer;
+}
+
+.color-theme-name:focus-within {
+    outline: 1px solid var(--color-focus) !important;
 }
 
 .arrow {
