--- a/css/project.css
+++ b/css/project.css
@@ -399,8 +399,8 @@ footer {
 }
 
 .theme-picker > option {
-    background-color: #1e1f1c;
-    color: #cfcfc2;
+    background-color: var(--background-color);
+    color: var(--secondary-text);
 }
 
 .mobile-view {
