--- a/css/article-5.css
+++ b/css/article-5.css
@@ -292,11 +292,11 @@ footer {
 }
 
 .social-links {
-    display: flex;
+    font-weight: 500;
 }
 
 .social-link {
-    padding-right: 0.7rem;
+    display: inline-block;
 }
 
 .social-link a {
@@ -429,6 +429,7 @@ footer {
     }
 
     .social-links {
+        display: flex;
         flex-direction: column;
         padding-bottom: 1.5rem;
     }
