--- a/css/article-2.css
+++ b/css/article-2.css
@@ -384,11 +384,11 @@ footer {
 }
 
 .social-links {
-    display: flex;
+    font-weight: 500;
 }
 
 .social-link {
-    padding-right: 0.7rem;
+    display: inline-block;
 }
 
 .social-link a {
@@ -530,6 +530,7 @@ footer {
     }
 
     .social-links {
+        display: flex;
         flex-direction: column;
         padding-bottom: 1.5rem;
     }
