--- a/css/article_3.css
+++ b/css/article_3.css
@@ -446,11 +446,11 @@ footer {
 }
 
 .social-links {
-    display: flex;
+    font-weight: 500;
 }
 
 .social-link {
-    padding-right: 0.7rem;
+    display: inline-block;
 }
 
 .social-link a {
@@ -582,6 +582,7 @@ footer {
     }
 
     .social-links {
+        display: flex;
         flex-direction: column;
         padding-bottom: 1.5rem;
     }
